# mosquitto-payload-postgres

./: CMakeLists.txt  Makefile  README.md  README_CN.md  mosquitto_payload_postgres.c  payload.conf
